声音也能和主动发送画面一样发送给观众了